--- a/index.html
+++ b/index.html
@@ -298,118 +298,87 @@
     </div>
   </div>
   <!-- HOME SECTION -->
-<section style="max-width: 1300px; margin: 3em auto; background: lch(100% 0.01 296.81); border-radius: 20px; box-shadow: 0 6px 36px rgba(80,110,150,0.08); padding: 2.5em 2em; font-family: 'Inter', Arial, sans-serif;">
-  <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2.3em;">
-    <!-- LEFT COLUMN: PHOTO & CONTACTS -->
-    <div style="flex: 0 0 260px; display: flex; flex-direction: column; align-items: center; min-width: 240px; max-width: 320px;">
-      <img src="profile.jpg" alt="Rahul Kumar profile photo" style="width:160px;height:220px;object-fit:cover;border-radius:15px;box-shadow:0 4px 16px rgba(40,80,160,0.14);border:2.5px solid #e7eaf2;background:#f5f7fa;display:block;">
-      <h1 style="color:#19386a;font-size:2.3rem;font-weight:800;margin:0.7em 0 0.3em 0;text-align:center;white-space:nowrap;">Rahul Kumar</h1>
-      <div style="font-size:1.13rem;color:#273964;font-weight:600;margin-bottom:0.2em;text-align:center;">
-        Research Scholar<br>Environmental Science & Engineering<br>
-        <span style="font-size:1rem;font-weight:400;color:#456;">IIT (ISM) Dhanbad</span>
-      </div>
-      <div class="contact-links" style="margin:0.7em 0 1.2em 0;text-align:center;display:flex;flex-direction:row;gap:0.5em;align-items:center;justify-content:center;flex-wrap:wrap;">
-        <a href="mailto:rahulevs01@gmail.com" title="Email" style="margin:0;"><i class="fa fa-envelope"></i></a>
-        <a href="tel:9636525194" title="Phone" style="margin:0;"><i class="fa fa-phone"></i></a>
-        <a href="https://www.linkedin.com/in/23dr0122" title="LinkedIn" target="_blank" style="margin:0;"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/rahul4planet" title="GitHub" target="_blank" style="margin:0;"><i class="fab fa-github"></i></a>
-        <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank" style="margin:0;"><i class="fab fa-orcid"></i></a>
-        <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank" style="margin:0;"><i class="fas fa-graduation-cap"></i></a>
-        <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank" style="margin:0;"><i class="fab fa-researchgate"></i></a>
-      </div>
+<section id="home-section" class="main-section" style="">
+  <div style="max-width:1100px;margin:0 auto;display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2.5em;">
+    <!-- LEFT COLUMN: Profile Photo -->
+    <div style="flex:0 0 180px; max-width:220px; display:flex; align-items:flex-start; justify-content:center;">
+      <img src="profile.jpg" alt="Rahul Kumar profile photo" style="width:180px;height:220px;object-fit:cover;border-radius:12px;box-shadow:0 4px 16px rgba(40,80,160,0.14);border:2.5px solid #e7eaf2;background:#f5f7fa;">
     </div>
-    <!-- RIGHT MAIN COLUMN -->
-    <div style="flex:1 1 320px; min-width:260px;">
-      <div style="font-size:1.17rem; color:#0f3057; font-weight:700;">Hi, welcome to my website!</div>
-      <div style="font-size:1.11rem;color:#2a334e;margin-bottom:1.1em;">
-        I am deeply committed to addressing real-world climate and water challenges using remote sensing, AI-ML, and geospatial technologies. My research focuses on uncertainties in climate projections for India, integrating hydrological data with advanced modeling, under the guidance of Prof. Riya Dutta.
+    <!-- RIGHT COLUMN: Name, Designation, Institute, Socials, etc. -->
+    <div style="flex:1 1 340px; min-width:260px; display:flex; flex-direction:column; justify-content:center;">
+      <h1 style="font-size:2.2rem;color:#19386a;font-weight:800;margin:0 0 0.2em 0;">Rahul Kumar</h1>
+      <div style="font-size:1.18rem;color:#222;font-weight:500;margin-bottom:0.2em;">Research Scholar</div>
+      <div style="font-size:1.13rem;color:#b71c1c;font-weight:600;margin-bottom:0.7em;">Department of Environmental Science & Engineering,<br>IIT (ISM) Dhanbad</div>
+      <div style="margin-bottom:1.1em;">
+        <a href="mailto:rahulevs01@gmail.com" title="Email" style="font-size:1.35em;color:#285c9c;margin:0 6px;"><i class="fa fa-envelope"></i></a>
+        <a href="tel:9636525194" title="Phone" style="font-size:1.35em;color:#285c9c;margin:0 6px;"><i class="fa fa-phone"></i></a>
+        <a href="https://www.linkedin.com/in/23dr0122" title="LinkedIn" target="_blank" style="font-size:1.35em;color:#0a66c2;margin:0 6px;"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/rahul4planet" title="GitHub" target="_blank" style="font-size:1.35em;color:#23272d;margin:0 6px;"><i class="fab fa-github"></i></a>
+        <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank" style="font-size:1.35em;color:#47A048;margin:0 6px;"><i class="fab fa-orcid"></i></a>
+        <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank" style="font-size:1.35em;color:#15418c;margin:0 6px;"><i class="fas fa-graduation-cap"></i></a>
+        <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank" style="font-size:1.35em;color:#14b15c;margin:0 6px;"><i class="fab fa-researchgate"></i></a>
       </div>
-
+      <div style="font-size:1.23rem; color:#19386a; font-weight:700; margin-bottom:0.5em;">Hi, welcome to my website!</div>
+      <div style="font-size:1.09rem; color:#283342; margin-bottom:1.1em;">
+        I am deeply committed to addressing real-world climate and water challenges using remote sensing, AI-ML, and geospatial technologies.<br>
+        My research focuses on uncertainties in climate projections for India, integrating hydrological data with advanced modeling, under the guidance of Prof. Riya Dutta.
+      </div>
       <!-- RESEARCH INTERESTS -->
       <div style="margin-bottom:0.8em;">
         <span style="color:#265ea8;font-weight:700;">Research Interests:</span>
-        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
-          <li>Climate Change</li>
-          <li>Hydrology</li>
-          <li>Remote Sensing & GIS</li>
-          <li>AI/ML</li>
-          <li>Climate Data Apps</li>
-        </ul>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">Hydroclimatology</span>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">Climate Change</span>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">Hydrology</span>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">Remote Sensing & GIS</span>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">AI/ML</span>
+        <span style="display:inline-block;background:#eaf3fb;padding:0.33em 0.9em;border-radius:15px;color:#184060;margin:0 0.19em 0.19em 0;font-size:1.02rem;">Climate Data Apps</span>
       </div>
-
-      <!-- TECHNICAL SKILLS -->
-      <div style="margin-bottom:0.8em;">
-        <span style="color:#265ea8;font-weight:700;">Technical Skills:</span>
-        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
-          <li><i class="fas fa-code"></i> Python, R</li>
-          <li><i class="fas fa-map-marked-alt"></i> ArcGIS, QGIS, GEE</li>
-          <li><i class="fas fa-database"></i> Pandas, Numpy, Scikit-learn</li>
-          <li><i class="fas fa-chart-bar"></i> ggplot2, Matplotlib, Plotly</li>
-          <li><i class="fas fa-cloud"></i> Visual Studio Code, Jupyter, Colab, GitHub</li>
-        </ul>
+      <div style="font-size:1.01rem;color:#3a4872;margin-bottom:0.8em;">
+        <strong>Key Skills:</strong> Python, R, GIS, Remote Sensing, Data Science, Visualization, Open Science
       </div>
-
-      <!-- KEY ACHIEVEMENTS -->
-      <div style="margin-bottom:0.8em;">
-        <span style="color:#265ea8;font-weight:700;">Key Achievements:</span>
-        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
-          <li>UGC NET Qualified (2022)</li>
-          <li>PG Diploma in Remote Sensing (BHU)</li>
-          <li>Integrated MSc in Environmental Science</li>
-          <li>Under development: monitoring web portal for India</li>
-        </ul>
+      <div style="font-size:1.01rem;color:#3a4872;">
+        <strong>Highlights:</strong> UGC NET (2022) | PG Diploma (BHU) | Integrated MSc | Climate portal developer
       </div>
-
-      <!-- DID YOU KNOW -->
-      <div style="background:#f7faff;border-left:4px solid #3881e6;border-radius:10px;padding:0.9em 1.1em;margin-top:1em;font-size:1rem;color:#254b97;">
+      <div style="background:#f7faff;border-left:4px solid #3881e6;border-radius:10px;padding:0.8em 1.1em;margin-top:1em;font-size:1.01rem;color:#254b97;">
         <strong>Did you know?</strong>
-        <ul style="margin:0.45em 0 0 1em;padding-left:0.2em;line-height:1.5;color:#253149;">
-          <li>Climate change is expected to increase the frequency and intensity of extreme weather events in India.</li>
-          <li>Remote sensing technology can provide critical data for monitoring and managing water resources.</li>
-          <li>AI and machine learning are being used to improve climate models and predictions.</li>
+        <ul style="margin:0.38em 0 0 1em;padding-left:0.2em;line-height:1.5;color:#253149;">
+          <li>Builds interactive dashboards for climate data</li>
+          <li>Visualizations featured in national outreach events</li>
+          <li>Active in open-source science collaborations</li>
         </ul>
       </div>
     </div>
   </div>
-  <!-- CONTACT SECTION (Home bottom) -->
-    <section style="background:#f7f7f7;padding:2.5em 0;">
-      <div style="max-width:1400px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:center;align-items:stretch;gap:2.5em;">
-        <!-- Map -->
-        <div style="flex:1 1 400px; min-width:320px;display:flex;align-items:center;justify-content:center;">
-          <div style="width:100%;max-width:420px;margin:0 auto;display:flex;justify-content:center;">
-            <iframe
-              src="https://www.google.com/maps?q=Department+of+Environmental+Science+and+Engineering,+IIT+(ISM)+Dhanbad&output=embed"
-              width="100%"
-              height="320"
-              style="border:0; border-radius:12px; box-shadow:0 4px 24px rgba(30,45,80,0.13); display:block; margin:0 auto;"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-        </div>
-        <!-- Contact Details -->
-        <div style="flex:1 1 400px; min-width:320px;display:flex;align-items:center;justify-content:center;">
-          <div style="text-align:center;">
-            <div style="font-size:2.2rem;font-family:'Inter',sans-serif;color:#183153;font-weight:700;margin-bottom:0.7em;letter-spacing:0.5px;text-decoration: underline;">Contacts</div>
-            <div style="font-size:1.07rem;margin-bottom:1em;">
-              Water Security and Climate Change lab<br>
-              Department of Environmental Science & Engineering<br>
-              IIT (ISM) Dhanbad, Jharkhand, INDIA
-            </div>
-            <div style="font-size:1.08rem;margin-bottom:1em;">
-              (+91) 9636525194
-            </div>
-            <div style="font-size:1.08rem;">
-              rahulevs01@gmail.com
-            </div>
-          </div>
-        </div>
+  <!-- CONTACT & LOCATION: Home bottom -->
+  <div style="width:100%;max-width:1100px;margin:2.5em auto 0 auto;display:flex;flex-wrap:wrap;align-items:center;justify-content:center;gap:2.5em;">
+    <!-- Google Map -->
+    <div style="flex:1 1 380px;min-width:320px;display:flex;align-items:center;justify-content:center;">
+      <iframe 
+        src="https://www.google.com/maps?q=Department+of+Environmental+Science+and+Engineering,+IIT+(ISM)+Dhanbad&output=embed"
+        width="100%" height="310" style="border:0;border-radius:14px;box-shadow:0 2px 14px #e5ebfa;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <!-- Contact Details -->
+    <div style="flex:2 1 480px;min-width:320px;text-align:center;">
+      <h2 style="font-family:'Playfair Display',serif;text-align:center;font-size:2rem;margin-bottom:1.2rem;"><u>Contacts</u></h2>
+      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+        <b style="color:#b71c1c;">Office Address:</b> <br>
+        Water Security and Climate Change lab <br>
+        Department of Environmental Science & Engineering<br>
+        IIT (ISM) Dhanbad, Jharkhand, INDIA<br>
+        <span style="color:#15418c;font-size:0.98em;">Google Maps: <a href="https://goo.gl/maps/2Qw2Qn6Qn6Q2" target="_blank" style="color:#0a66c2;text-decoration:underline;">View Location</a></span>
       </div>
-    </section>
-  </section>
-
-  <!-- ABOUT SECTION -->
+      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+        <b style="color:#b71c1c;">Mobile:</b><br>
+        (+91) 9636525194
+      </div>
+      <div style="font-size:1.13rem;color:#20222a;">
+        <b style="color:#b71c1c;">Email:</b><br>
+        <span>rahulevs01@gmail.com</span>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ABOUT SECTION -->
   <section id="about-section" class="main-section" style="display:none;">
     <!-- LOGOS ROW: About section top -->
     <div id="about-logos-row" style="background:#fff;padding:1.2rem 0 1.2rem 0;display:flex;justify-content:center;align-items:center;gap:2.2rem;box-shadow:0 2px 10px rgba(30,60,130,0.07);margin-bottom:0.5rem;">
@@ -546,34 +515,6 @@
       <h2 style="font-family:'Playfair Display',serif;font-size:1.4rem;color:#114674;margin-bottom:1.2rem;">Media</h2>
       <div style="background:#fff;padding:1.5rem 1.3rem 1.3rem 1.3rem;border-radius:14px;box-shadow:0 2px 14px #e5ebfa;">
         <p>Coming soon...</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT SECTION -->
-  <section id="contact-section" class="main-section" style="display:none;">
-    <div style="max-width:1300px;margin:0 auto;padding:2.5rem 1rem;display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
-      <div style="flex:1 1 380px;min-width:320px;">
-        <iframe 
-          src="https://www.google.com/maps?q=Department+of+Environmental+Science+and+Engineering,+IIT+(ISM)+Dhanbad&output=embed"
-          width="100%" height="310" style="border:0;border-radius:14px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div style="flex:2 1 480px;min-width:320px;text-align:center;">
-        <h2 style="font-family:'Playfair Display',serif;text-align:center;font-size:2rem;margin-bottom:1.2rem;"><u>Contacts</u></h2>
-        <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
-          <b style="color:#b71c1c;">Office:</b> <br>
-          Water Security and Climate Change lab <br>
-          Department of Environmental Science & Engineering<br>
-          IIT (ISM) Dhanbad, Jharkhand, INDIA
-        </div>
-        <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
-          <b style="color:#b71c1c;">Mobile:</b><br>
-          (+91) 9636525194
-        </div>
-        <div style="font-size:1.13rem;color:#20222a;">
-          <b style="color:#b71c1c;">Email:</b><br>
-          <span>rahulevs01@gmail.com</span>
-        </div>
       </div>
     </div>
   </section>
