--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -42,15 +42,51 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
+            <!-- Banner at top with Acharya Prashant climate quote -->
+            <div style="margin-bottom: 2rem; display: flex; flex-direction: column; align-items: center;">
+                <img src="nasa.jpg" alt="NASA Banner" style="width: 100%; max-width: 600px; border-radius: 1rem; box-shadow: 0 4px 16px rgba(0,0,0,0.10); margin-bottom: 1rem;">
+                <blockquote style="font-size: 1.1rem; font-style: italic; color: #234; background: #f5f7fa; border-left: 4px solid #2a4d69; padding: 1rem 2rem; border-radius: 0.5rem; max-width: 600px; text-align: center;">
+                    "The climate is not just a topic, it is the very basis of our existence. To care for the climate is to care for life itself."<br>
+                    <span style="font-size: 0.95rem; color: #567;">— Acharya Prashant</span>
+                </blockquote>
+            </div>
             <div class="hero-content">
-                <h1 class="hero-title">Rahul Kumar</h1>
-                <p class="hero-subtitle">PhD Candidate in Environmental Science & Engineering</p>
-                <p class="hero-description">Specializing in Hydrology and Water Resource Science at IIT Dhanbad</p>
+                <div style="display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
+                    <img src="profile.jpg" alt="Rahul Kumar" style="width: 160px; height: 160px; object-fit: cover; border-radius: 50%; box-shadow: 0 4px 16px rgba(0,0,0,0.08); border: 4px solid #fff; margin-bottom: 1rem;">
+                    <h1 class="hero-title">Rahul Kumar</h1>
+                    <p class="hero-subtitle">PhD Candidate in Environmental Science & Engineering</p>
+                    <p class="hero-description">Specializing in Hydrology and Water Resource Science at IIT Dhanbad</p>
+                </div>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
                     <button class="btn btn-secondary" onclick="window.print()">
                         <i class="fas fa-download"></i> Download CV
                     </button>
+                </div>
+            </div>
+            <!-- Banner with NASA image and logos -->
+            <div style="margin-top: 2.5rem; display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
+                <img src="nasa.jpg" alt="NASA Banner" style="width: 100%; max-width: 600px; border-radius: 1rem; box-shadow: 0 4px 16px rgba(0,0,0,0.10);">
+                <div style="display: flex; gap: 2rem; justify-content: center; align-items: center; flex-wrap: wrap;">
+                    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height: 48px;">
+                    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height: 48px;">
+                    <img src="bhu.jpg" alt="Banaras Hindu University" style="height: 48px;">
+                </div>
+            </div>
+            <!-- Home bottom: Contact and Google IIT ISM Dhanbad Environmental Science Department -->
+            <div style="margin-top: 2.5rem; text-align: center;">
+                <h3>Contact & Useful Links</h3>
+                <div style="display: flex; flex-direction: column; align-items: center; gap: 0.5rem;">
+                    <a href="#contact" class="btn btn-primary" style="width: fit-content;">Contact Me</a>
+                    <a href="https://www.iitism.ac.in/" target="_blank" rel="noopener" class="btn btn-secondary" style="width: fit-content;">
+                        <i class="fas fa-university"></i> IIT (ISM) Dhanbad
+                    </a>
+                    <a href="https://www.iitism.ac.in/index.php/Departments/details/21" target="_blank" rel="noopener" class="btn btn-secondary" style="width: fit-content;">
+                        <i class="fas fa-leaf"></i> Environmental Science Department
+                    </a>
+                    <a href="https://www.google.com/maps/place/IIT+(ISM)+Dhanbad/" target="_blank" rel="noopener" class="btn btn-secondary" style="width: fit-content;">
+                        <i class="fas fa-map-marker-alt"></i> Google Map: IIT (ISM) Dhanbad
+                    </a>
                 </div>
             </div>
         </div>
@@ -63,41 +99,39 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3>Doctor of Philosophy - Environmental Science & Engineering</h3>
-                        <h4>Indian Institute of Technology (ISM), Dhanbad</h4>
-                        <p class="timeline-period">Currently Pursuing</p>
-                        <p>Specialization: Hydrology and Water Resource Science</p>
+                    <div class="timeline-content" style="display: flex; align-items: center; gap: 1rem;">
+                        <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height: 40px;">
+                        <div>
+                            <h3>Doctor of Philosophy - Environmental Science & Engineering</h3>
+                            <h4>Indian Institute of Technology (ISM), Dhanbad</h4>
+                            <p class="timeline-period">Currently Pursuing</p>
+                            <p>Specialization: Hydrology and Water Resource Science</p>
+                        </div>
                     </div>
                 </div>
                 
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3>PG Diploma Remote Sensing & GIS</h3>
-                        <h4>Banaras Hindu University, Varanasi</h4>
-                        <p class="timeline-period">November 2022 - July 2023</p>
-                        <p class="grade">CGPA: 8.30</p>
+                    <div class="timeline-content" style="display: flex; align-items: center; gap: 1rem;">
+                        <img src="bhu.jpg" alt="Banaras Hindu University" style="height: 40px;">
+                        <div>
+                            <h3>PG Diploma Remote Sensing & GIS</h3>
+                            <h4>Banaras Hindu University, Varanasi</h4>
+                            <p class="timeline-period">November 2022 - July 2023</p>
+                            <p><strong>Project:</strong> Land Use/Land Cover Change Detection using Remote Sensing and GIS Techniques in Varanasi District</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3>M.Sc. in Environmental Science</h3>
-                        <h4>Central University of Rajasthan, Ajmer</h4>
-                        <p class="timeline-period">June 2019 - July 2021</p>
-                        <p class="grade">Percentage: 75.34%</p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3>B.Sc. in Environmental Science</h3>
-                        <h4>Central University of Rajasthan, Ajmer</h4>
-                        <p class="timeline-period">June 2016 - May 2019</p>
-                        <p class="grade">Percentage: 57.06%</p>
+                    <div class="timeline-content" style="display: flex; align-items: center; gap: 1rem;">
+                        <img src="curaj.jpg" alt="Central University of Rajasthan" style="height: 40px;">
+                        <div>
+                            <h3>Integrated M.Sc. in Environmental Science</h3>
+                            <h4>Central University of Rajasthan, Ajmer</h4>
+                            <p class="timeline-period">June 2016 - July 2021</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -170,20 +204,16 @@
                             <i class="fas fa-globe"></i>
                             <span>QGIS</span>
                         </div>
-                        <div class="skill-item">
-                            <i class="fas fa-satellite-dish"></i>
-                            <span>ERDAS</span>
-                        </div>
-                        <div class="skill-item">
-                            <i class="fas fa-eye"></i>
-                            <span>ENVI</span>
-                        </div>
                     </div>
                 </div>
 
                 <div class="skill-category">
                     <h3>Programming & Analysis</h3>
                     <div class="skill-items">
+                        <div class="skill-item">
+                            <i class="fab fa-python"></i>
+                            <span>Python</span>
+                        </div>
                         <div class="skill-item">
                             <i class="fab fa-r-project"></i>
                             <span>R Language</span>
