--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     <section id="home" class="hero">
         <div class="container">
             <!-- Banner at top with Acharya Prashant climate quote -->
-            <div style="margin-bottom: 2rem; display: flex; flex-direction: column; align-items: center;">
-                <img src="nasa.jpg" alt="NASA Banner" style="width: 100%; max-width: 600px; border-radius: 1rem; box-shadow: 0 4px 16px rgba(0,0,0,0.10); margin-bottom: 1rem;">
-                <blockquote style="font-size: 1.1rem; font-style: italic; color: #234; background: #f5f7fa; border-left: 4px solid #2a4d69; padding: 1rem 2rem; border-radius: 0.5rem; max-width: 600px; text-align: center;">
+            <div style="margin-bottom: 2rem; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw; display: flex; flex-direction: column; align-items: center;">
+                <img src="nasa.jpg" alt="NASA Banner" style="display: block; width: 100vw; min-width: 100vw; max-width: 100vw; height: 00px; object-fit: cover; border-radius: 0; box-shadow: 0 4px 16px rgba(0,0,0,0.10); margin-bottom: 1rem;">
+                <blockquote style="font-size: 1.1rem; font-style: italic; color: #234; background: url('GOES.jpg') center/cover no-repeat, #f5f7fa; border-left: 4px solid #2a4d69; padding: 1rem 2rem; border-radius: 0.5rem; max-width: 700px; text-align: center; background-blend-mode: lighten; background-color: #f5f7fa; margin: 0 auto;">
                     "The climate is not just a topic, it is the very basis of our existence. To care for the climate is to care for life itself."<br>
                     <span style="font-size: 0.95rem; color: #567;">— Acharya Prashant</span>
                 </blockquote>
             </div>
             <div class="hero-content">
                 <div style="display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
-                    <img src="profile.jpg" alt="Rahul Kumar" style="width: 160px; height: 160px; object-fit: cover; border-radius: 50%; box-shadow: 0 4px 16px rgba(0,0,0,0.08); border: 4px solid #fff; margin-bottom: 1rem;">
+                    <img src="profile.jpg" alt="Rahul Kumar" style="width: 260px; height: 260px; object-fit: cover; border-radius: 50%; box-shadow: 0 4px 16px rgba(0,0,0,0.08); border: 4px solid #fff; margin-bottom: 1rem;">
                     <h1 class="hero-title">Rahul Kumar</h1>
                     <p class="hero-subtitle">PhD Candidate in Environmental Science & Engineering</p>
                     <p class="hero-description">Specializing in Hydrology and Water Resource Science at IIT Dhanbad</p>
@@ -66,7 +66,6 @@
             </div>
             <!-- Banner with NASA image and logos -->
             <div style="margin-top: 2.5rem; display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
-                <img src="nasa.jpg" alt="NASA Banner" style="width: 100%; max-width: 600px; border-radius: 1rem; box-shadow: 0 4px 16px rgba(0,0,0,0.10);">
                 <div style="display: flex; gap: 2rem; justify-content: center; align-items: center; flex-wrap: wrap;">
                     <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height: 48px;">
                     <img src="curaj.jpg" alt="Central University of Rajasthan" style="height: 48px;">
