--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     "The climate is not just a topic, it is the very basis of our existence. To care for the climate is to care for life itself."<br>
                     <span style="font-size: 0.95rem; color: #567;">— Acharya Prashant</span>
                 </blockquote>
+                <!-- Climate Clock Widget placed here -->
+                <div style="margin: 1.5rem 0;">
+                    <climate-clock />
+                </div>
             </div>
             <div class="hero-content">
                 <div style="display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
@@ -354,6 +358,8 @@
         </div>
     </footer>
 
+    <!-- Climate Clock Widget script (put just before closing body tag so it loads once for all clocks) -->
+    <script src="https://climateclock.world/widget-v2.js" async></script>
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
