--- a/index.html
+++ b/index.html
@@ -1,117 +1,364 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Kumar - Environmental Science Professional</title>
-    <meta name="description" content="Portfolio of Rahul Kumar, PhD candidate in Environmental Science & Engineering at IIT Dhanbad, specializing in Hydrology and Water Resource Science">
-    <meta name="keywords" content="Environmental Science, Hydrology, Water Resources, Remote Sensing, GIS, PhD, Research">
-    
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet"> <!-- LED style font -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rahul Kumar - Environmental Science Professional</title>
+  <meta name="description" content="Portfolio of Rahul Kumar, PhD candidate in Environmental Science & Engineering at IIT Dhanbad, specializing in Hydrology and Water Resource Science">
+  <meta name="keywords" content="Environmental Science, Hydrology, Water Resources, Remote Sensing, GIS, PhD, Research">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    :root {
+      --primary: #234e70;
+      --accent: #42b883;
+      --bg: #f6f8fa;
+      --surface: #fff;
+      --ticker-black: #181c20;
+      --ticker-gray: #25272a;
+      --ticker-green: #bcf945;
+      --ticker-red: #ff3333;
+      --shadow: 0 4px 18px rgba(35,78,112,0.05);
+      --radius: 14px;
+      --nav-height: 64px;
+    }
+    body {
+      font-family: 'Inter', Arial, sans-serif;
+      background: var(--bg);
+      margin: 0;
+      color: #233;
+      min-height: 100vh;
+    }
+    /* Navbar */
+    .navbar {
+      background: var(--surface);
+      box-shadow: var(--shadow);
+      height: var(--nav-height);
+      position: sticky;
+      top: 0;
+      z-index: 20;
+      display: flex;
+      align-items: center;
+    }
+    .nav-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 96vw;
+      margin: 0 auto;
+      max-width: 1200px;
+    }
+    .nav-logo h2 {
+      margin: 0;
+      font-size: 1.45rem;
+      color: var(--primary);
+      letter-spacing: 1px;
+      font-weight: 700;
+    }
+    .nav-menu {
+      display: flex;
+      gap: 2.1rem;
+    }
+    .nav-link {
+      color: #2a2f3a;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.05rem;
+      position: relative;
+      padding: 4px 0;
+      transition: color .22s;
+    }
+    .nav-link:hover,
+    .nav-link:focus {
+      color: var(--accent);
+    }
+    .nav-link::after {
+      content: "";
+      display: block;
+      height: 3px;
+      width: 0;
+      background: var(--accent);
+      transition: width .3s;
+      border-radius: 1px;
+    }
+    .nav-link:hover::after,
+    .nav-link:focus::after {
+      width: 80%;
+    }
+    .nav-toggle { display: none; } /* For mobile burger, not shown here */
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
-    <style>
-      .climate-ticker-container {
-        width: 100vw;
-        background: #222;
-        border-top: 4px solid #356d37;
-        border-bottom: 4px solid #356d37;
-        color: #fff;
-        font-family: 'Orbitron', 'monospace';
-        padding: 0;
-        margin: 0;
-        position: relative;
-        left: 50%;
-        right: 50%;
-        margin-left: -50vw;
-        margin-right: -50vw;
-        box-sizing: border-box;
-      }
-      .climate-ticker-row {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0.3rem 2vw;
-        font-size: 1.1rem;
-        letter-spacing: 2px;
-        border-bottom: 1px solid #111;
-      }
-      .climate-ticker-header {
-        background: #333;
-        font-size: 1.07rem;
-        color: #fff;
-        font-family: 'Orbitron', 'monospace';
-        font-weight: bold;
-        border-bottom: 2px solid #222;
-        text-transform: uppercase;
-      }
-      .climate-ticker-numbers {
-        background: #111;
-        color: #f33;
-        font-size: 1.8rem;
-        font-weight: bold;
-        font-family: 'Orbitron', 'monospace';
-        letter-spacing: 3px;
-        border-bottom: 2px solid #333;
-        min-height: 2.4em;
-      }
-      .climate-ticker-green {
-        background: #111;
-        color: #c6f55e;
-        font-size: 1.2rem;
-        white-space: nowrap;
-        overflow: hidden;
-        position: relative;
-        min-height: 2em;
-      }
-      .climate-ticker-scroll {
-        display: inline-block;
-        padding-left: 100vw;
-        animation: tickerMove 35s linear infinite;
-      }
-      @keyframes tickerMove {
-        0% { transform: translateX(0); }
-        100% { transform: translateX(-100%); }
-      }
-      @media (max-width: 800px) {
-        .climate-ticker-row { font-size: 0.9rem; }
-        .climate-ticker-numbers { font-size: 1.2rem; }
-        .climate-ticker-green { font-size: 1.0rem; }
-      }
-    </style>
+    /* HERO */
+    .hero {
+      background: linear-gradient(90deg,#e8f3fa 20%,#f6f8fa 100%);
+      box-shadow: var(--shadow);
+      margin-bottom: 2rem;
+      padding: 2.5rem 0 1.2rem 0;
+    }
+    .hero-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .hero-content img {
+      width: 190px;
+      height: 190px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 3px 16px rgba(35,78,112,.10);
+      border: 4px solid #fff;
+      margin-bottom: 1rem;
+    }
+    .hero-title {
+      font-size: 2.2rem;
+      font-weight: 700;
+      margin: .25rem 0 .7rem 0;
+      color: var(--primary);
+      letter-spacing: .5px;
+    }
+    .hero-subtitle {
+      color: var(--accent);
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: .3rem;
+    }
+    .hero-description {
+      font-size: 1.12rem;
+      color: #234e70b2;
+      margin-bottom: 1.3rem;
+    }
+    .hero-buttons {
+      display: flex;
+      gap: 1.3rem;
+      margin-bottom: 1.2rem;
+    }
+    .btn {
+      padding: .7em 1.7em;
+      border: none;
+      border-radius: var(--radius);
+      font-size: 1.07rem;
+      font-weight: 600;
+      box-shadow: 0 2px 10px rgba(35,78,112,0.06);
+      cursor: pointer;
+      transition: background .18s, color .16s;
+      text-decoration: none;
+      outline: none;
+      display: inline-flex;
+      align-items: center;
+      gap: .7em;
+    }
+    .btn-primary {
+      background: var(--primary);
+      color: #fff;
+    }
+    .btn-primary:hover, .btn-primary:focus {
+      background: #176384;
+      color: #fff;
+    }
+    .btn-secondary {
+      background: var(--accent);
+      color: #fff;
+    }
+    .btn-secondary:hover, .btn-secondary:focus {
+      background: #2f7d6c;
+      color: #fff;
+    }
+
+    /* Sections */
+    section { padding: 1.7rem 0; }
+    .container { width: 92vw; max-width: 1100px; margin: 0 auto; }
+
+    .section-title {
+      font-size: 1.7rem;
+      color: var(--primary);
+      margin-bottom: 1.4rem;
+      border-left: 5px solid var(--accent);
+      padding-left: 12px;
+      font-weight: 700;
+    }
+    /* Example grid for skills, research, timeline, etc. */
+    .skills-grid, .timeline, .research-grid, .achievements-grid, .activities-grid, .contact-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.1rem;
+    }
+    .timeline-item, .research-card, .achievement-card, .activity-item, .contact-item {
+      background: var(--surface);
+      border-radius: var(--radius);
+      box-shadow: 0 2px 8px rgba(35,78,112,.08);
+      padding: 1.1rem 1.2rem;
+      margin-bottom: .8rem;
+      flex: 1 1 300px;
+      min-width: 260px;
+      max-width: 99%;
+    }
+    /* Contact Info */
+    .contact-grid {
+      justify-content: space-between;
+      gap: 2rem;
+    }
+    .contact-item { flex: 1 1 200px; }
+    /* Ticker */
+    .climate-ticker-container {
+      width: 100vw;
+      background: var(--ticker-black);
+      color: #fff;
+      font-family: 'Orbitron', 'monospace';
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
+      box-sizing: border-box;
+      margin-top: 2.5rem;
+      box-shadow: 0 -1px 24px #203a4230;
+      border-top: 3px solid #356d37;
+      border-bottom: 3px solid #356d37;
+    }
+    .climate-ticker-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.4rem 2vw;
+      font-size: 1.12rem;
+      letter-spacing: 2px;
+      border-bottom: 1px solid #232528;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .climate-ticker-header {
+      background: var(--ticker-gray);
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #fff;
+      border-bottom: 2px solid #181c20;
+      text-transform: uppercase;
+      letter-spacing: 2.5px;
+    }
+    .climate-ticker-numbers {
+      background: #15181a;
+      color: var(--ticker-red);
+      font-size: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 3px;
+      border-bottom: 2px solid #232528;
+      min-height: 2.2em;
+    }
+    .climate-ticker-numbers div { font-family: 'Orbitron', 'monospace'; }
+    .climate-ticker-green {
+      background: #15181a;
+      color: var(--ticker-green);
+      font-size: 1.13rem;
+      white-space: nowrap;
+      overflow: hidden;
+      position: relative;
+      min-height: 2em;
+    }
+    .climate-ticker-scroll {
+      display: inline-block;
+      padding-left: 100vw;
+      animation: tickerMove 35s linear infinite;
+    }
+    @keyframes tickerMove {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+    /* Footer */
+    .footer {
+      background: #1b212a;
+      color: #bfc8d1;
+      text-align: center;
+      padding: 1.4rem 0 .8rem 0;
+      font-size: 1rem;
+      border-top: 1px solid #2e4156;
+      margin-top: 0;
+    }
+    /* Responsive */
+    @media (max-width: 900px) {
+      .container, .climate-ticker-row { width: 99vw; }
+      .nav-container { width: 99vw; }
+    }
+    @media (max-width: 600px) {
+      .nav-menu { gap: 1.1rem; }
+      .hero-content img { width: 115px; height: 115px; }
+      .section-title { font-size: 1.2rem; }
+      .climate-ticker-row { font-size: 0.87rem; }
+      .climate-ticker-numbers { font-size: 1.0rem; }
+      .climate-ticker-green { font-size: .91rem; }
+      .btn, .btn-primary, .btn-secondary { font-size: .95rem; padding: .6em 1.1em;}
+    }
+  </style>
 </head>
 <body>
-    <!-- ...Your content above (navigation, sections, etc.)... -->
-
-    <!-- Place this before your footer, at the very bottom: -->
-    <div class="climate-ticker-container">
-      <div class="climate-ticker-row climate-ticker-header">
-        <div>CLIMATECLOCK.WORLD</div>
-        <div>CARBON BUDGET REMAINING</div>
-        <div>TIME TO ACT</div>
-      </div>
-      <div class="climate-ticker-row climate-ticker-numbers">
-        <div>DEADLINE</div>
-        <div>106,80,15,54,816 TONS</div>
-        <div>2 YEARS 198 DAYS 19:00:37</div>
-      </div>
-      <div class="climate-ticker-row climate-ticker-green">
-        <span class="climate-ticker-scroll">
-          LIFELINE &nbsp; | &nbsp; BREAKING: DENMARK TO CUT EMISSIONS 70% BY 2030 &nbsp; | &nbsp; COST OF SOLAR HAS DROPPED DRAMATICALLY &nbsp; | &nbsp; JOIN THE MOVEMENT AT CLIMATECLOCK.WORLD &nbsp;
-        </span>
+  <!-- Navigation -->
+  <nav class="navbar" id="navbar">
+    <div class="nav-container">
+      <div class="nav-logo"><h2>Rahul Kumar</h2></div>
+      <div class="nav-menu" id="nav-menu">
+        <a href="#home" class="nav-link">Home</a>
+        <a href="#education" class="nav-link">Education</a>
+        <a href="#research" class="nav-link">Research</a>
+        <a href="#skills" class="nav-link">Skills</a>
+        <a href="#achievements" class="nav-link">Achievements</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </div>
     </div>
+  </nav>
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="container">
+      <div style="margin-bottom: 2rem; display: flex; flex-direction: column; align-items: center;">
+        <img src="nasa.jpg" alt="NASA Banner" style="display: block; width: 100vw; max-width:1200px; object-fit: cover; border-radius: 0; box-shadow: 0 4px 16px rgba(0,0,0,0.10); margin-bottom: 1rem;">
+        <blockquote style="font-size: 1.1rem; font-style: italic; color: #234; background: url('GOES.jpg') center/cover no-repeat, #f5f7fa; border-left: 4px solid #2a4d69; padding: 1rem 2rem; border-radius: 0.5rem; max-width: 700px; text-align: center; background-blend-mode: lighten; background-color: #f5f7fa; margin: 0 auto;">
+          "The climate is not just a topic, it is the very basis of our existence. To care for the climate is to care for life itself."<br>
+          <span style="font-size: 0.95rem; color: #567;">— Acharya Prashant</span>
+        </blockquote>
+      </div>
+      <div class="hero-content">
+        <img src="profile.jpg" alt="Rahul Kumar">
+        <h1 class="hero-title">Rahul Kumar</h1>
+        <p class="hero-subtitle">PhD Candidate in Environmental Science & Engineering</p>
+        <p class="hero-description">Specializing in Hydrology and Water Resource Science at IIT Dhanbad</p>
+        <div class="hero-buttons">
+          <a href="#contact" class="btn btn-primary">Get In Touch</a>
+          <button class="btn btn-secondary" onclick="window.print()">
+            <i class="fas fa-download"></i> Download CV
+          </button>
+        </div>
+      </div>
+      <!-- (You can add more content here as needed) -->
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer style="background:#222; color:#eee; text-align:center; padding:1.2rem 0;">
-      &copy; 2024 Rahul Kumar. All rights reserved.
-    </footer>
+  <!-- Example sections (education, research, skills, etc.) would go here -->
+  <!-- ... -->
+
+  <!-- CLIMATE TICKER BOTTOM -->
+  <div class="climate-ticker-container">
+    <div class="climate-ticker-row climate-ticker-header">
+      <div>CLIMATECLOCK.WORLD</div>
+      <div>CARBON BUDGET REMAINING</div>
+      <div>TIME TO ACT</div>
+    </div>
+    <div class="climate-ticker-row climate-ticker-numbers">
+      <div>DEADLINE</div>
+      <div>106,80,15,54,816 TONS</div>
+      <div>2 YEARS 198 DAYS 19:00:37</div>
+    </div>
+    <div class="climate-ticker-row climate-ticker-green">
+      <span class="climate-ticker-scroll">
+        LIFELINE &nbsp; | &nbsp; BREAKING: DENMARK TO CUT EMISSIONS 70% BY 2030 &nbsp; | &nbsp; COST OF SOLAR HAS DROPPED DRAMATICALLY &nbsp; | &nbsp; JOIN THE MOVEMENT AT CLIMATECLOCK.WORLD &nbsp;
+      </span>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    &copy; 2024 Rahul Kumar. All rights reserved.
+  </footer>
 </body>
 </html>
