--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                     <div class="contact-info">
                         <h3>Address</h3>
-                        <p>Dharamarai Chak, Lakhisarai<br>Pin code - 811311<br>Bihar, India</p>
+                        <p>IIT(ISM),Dhanbad <br>Pin code - 826004<br>Jharkhand, India</p>
                     </div>
                 </div>
 
@@ -340,7 +340,7 @@
                     </div>
                     <div class="contact-info">
                         <h3>Email</h3>
-                        <p>Rahul.evs01@gmail.com</p>
+                        <p>rahulevs01@gmail.com</p>
                     </div>
                 </div>
             </div>
